# eth-project

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.consumer  Dockerfile.etl  README.md  airflow_optimization_report.md  gke.md  main.py  makefile  pyproject.toml  requirements-etl.txt  requirements-spark.txt  requirements.txt  run_stream.py  stream-data.md
.github/workflows/: deploy-vm1.yml
config/: airflow.cfg
dags/: eth_etl_dag.py  eth_etl_dag_gke.py  eth_etl_dag_k8s.py  eth_etl_test_dag.py  eth_gold_dag.py  eth_gold_dag_gke.py  eth_gold_dag_k8s.py  eth_gold_dag_local.py  eth_gold_test_dag.py  eth_silver_dag.py  eth_silver_dag_gke.py  eth_silver_dag_k8s.py  eth_silver_dag_local.py  eth_silver_test_dag.py  spark_k8s_test_dag.py  test_dag.py
dags/utils/: notifications.py  spark_spec.py  spark_spec_gke.py
docs/: architecture_guide.md  implementation_plan.md  spark_tuning_guide.md
docs/bronze/: airflow_optimization_report.md
docs/elasticstack/: elk_stack_architecture_report.md  implementation_plan.md
docs/gold/: gold_transform.md  token_ranking.md  whale_analysis.md
docs/silver/: data_integrity_report.md  silver_transform.md  spark_setup_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
infra/: docker-compose-spark.yaml  filebeat.yml  spark-application.yaml  vm1-docker-compose.yml  vm2-docker-compose.yml
infra/airflow_docker/: Dockerfile  docker-compose.yaml
infra/kafka/: docker-compose.yaml  makefile
infra/postgres/: init.sql
lag_test/: README.md  consumer.py  docker-compose.yaml  producer.py  test_compression.py
scratch/: check_weth.py  check_weth_mkt.py
scripts/: bench_consumer.py  bench_producer.sh  bootstrap_es_tokens.py  test_spark_connection.py
src/: config.py
src/address/: fetch_known_labels.py  top1000_erc20_tokens.py
src/backend/: README.md  main.py
src/consumer/: config.py  db.py  kafka_client.py  logger.py  main.py  models.py  redis_client.py
src/data/: known_labels.csv  known_labels.parquet  top1000_erc20_tokens.csv  top1000_erc20_tokens.parquet
src/gold/: send_alerts.py  sync_bigquery.py  token_ranking.py  (+2 more)
test/: test_backend_consumer.py  test_cache_load.py  test_explain_analyze.py  test_token_cache.py  test_whale_routing.py
(+88 files in other folders)
