[project]
name = "eth-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ethereum-etl<=2.4.2",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.9.0",
    "httpx>=0.28.1",
    "pyspark>=4.0.2",
    "python-dotenv>=1.2.1",
    "setuptools<70",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
