[project]
name = "eth-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=3.0.0",
    "confluent-kafka>=2.14.2",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.9.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.11.0",
    "pyspark==4.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "setuptools<70",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]


[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
